0.3.0 - wyrd update, backups hard-link the index, TEI embedder, librarian 0.1.2